--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Camera sensor -->
     <canvas id="camera--sensor"></canvas>
     <!-- Camera output -->
-    <img src="//:0" alt="Your picture" id="camera--output">
+    <img src="//:0" alt="" id="camera--output">
     <!-- Camera trigger -->
     <button id="camera--trigger">Take a picture</button>
 </main>
