Add icons, manifest, service worker

--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <html lang=”en”>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Name of your awesome camera app -->
-<title>Camera App</title>
-<!-- Link to your main style sheet-->
-<link rel="stylesheet" href="style.css"> 
-</head>
-<body>
-<!-- Camera -->
-<main id="camera">
-    <!-- Camera view -->
-    <video id="camera--view" autoplay playsinline></video>
-    
-    <!-- Camera sensor -->
-    <canvas id="camera--sensor"></canvas>
-    <!-- Camera output -->
-    <img src="//:0" alt="" id="camera--output">
-    <!-- Camera trigger -->
-    <button id="camera--trigger">Take a picture</button>
-</main>
-<!-- Reference to your JavaScript file -->
-<script src="app.js"></script> 
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="application-name" content="Camera app">
+		<meta name="apple-mobile-web-app-title" content="Camera app">
+
+		<!-- Name of the app -->
+		<title>Camera App</title>
+
+		<!-- Link to site manifest -->
+		<link rel="manifest" href="site.webmanifest">
+
+		<!-- Links to icons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#603cba">
+		<meta name="msapplication-TileColor" content="#603cba">
+		<meta name="theme-color" content="#ffffff">
+
+		<!-- Link to main style sheet -->
+		<link rel="stylesheet" href="style.css"> 
+	</head>
+	<body>
+
+		<!-- Camera -->
+		<main id="camera">
+
+		    <!-- Camera view -->
+		    <video id="camera--view" autoplay playsinline></video>
+		    
+		    <!-- Camera sensor -->
+		    <canvas id="camera--sensor"></canvas>
+
+		    <!-- Camera output -->
+		    <img src="//:0" alt="" id="camera--output">
+
+		    <!-- Camera trigger -->
+		    <button id="camera--trigger">Take a picture</button>
+
+		</main>
+
+		<!-- Reference to your JavaScript file -->
+		<script src="app.js"></script> 
+	</body>
 </html>
