--- a/part-2/index.html
+++ b/part-2/index.html
@@ -46,6 +46,10 @@
 		</main>
 
 		<!-- Reference to your JavaScript file -->
-		<script src="app.js"></script> 
+		<script src="app.js"></script>
+
+		<!-- Reference to adapter.js -->
+		<script src="adapter-min.js"></script>
+
 	</body>
 </html>
