--- a/part-1/index.html
+++ b/part-1/index.html
@@ -27,9 +27,26 @@
 		    <!-- Camera trigger -->
 		    <button id="camera--trigger">Take a picture</button>
 
+		    <input id="comment--input" type="text" name="FirstName" value="Mickey"><br>
+			<button id="comment--button">submit</button>
+
+			<div class="bullet" id="bullets">
+				<button>1234566</button>
+				<button>1234566</button>
+				<button>1234566</button>
+				<button>1234566</button>
+				<button>1234566</button>
+				<button>1234566</button>
+				<button>1234566</button>
+			</div>
+
+			
 		</main>
 
 		<!-- Reference to your JavaScript file -->
 		<script src="app.js"></script> 
+		<script src= 
+"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> 
+  </script>
 	</body>
 </html>
