--- a/part-1/index.html
+++ b/part-1/index.html
@@ -25,9 +25,9 @@
 		    <img src="//:0" alt="" id="camera--output">
 
 		    <!-- Camera trigger -->
-		    <button id="camera--trigger">Take a picture</button>
+		    <button id="camera--trigger"></button>
 
-		    <input id="comment--input" type="text" name="FirstName" value="Mickey"><br>
+		    <input id="comment--input" type="text" name="FirstName" value="What do you think?"><br>
 			<button id="comment--button">submit</button>
 
 			<div class="bullet" id="bullets">
