--- a/part-3/index.html
+++ b/part-3/index.html
@@ -20,7 +20,7 @@
 <body>
  
 <div id="draggable" class="ui-widget-content">
-  <p>Drag me around</p>
+    <img src="https://cdn.bulbagarden.net/upload/7/79/Squirtle_SSBU.png">
 </div>
  
  
