--- a/part-3/index.html
+++ b/part-3/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
   <style>
-  #draggable { width: 150px; height: 150px; padding: 0.5em; }
+ 
   </style>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+ <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+ <script src="jquery.ui.touch-punch.min.js"></script>
   <script>
   $( function() {
     $( "#draggable" ).draggable();
@@ -20,7 +21,7 @@
 <body>
  
 <div id="draggable" class="ui-widget-content">
-    <img src="https://cdn.bulbagarden.net/upload/7/79/Squirtle_SSBU.png">
+    <img src="https://cdn.bulbagarden.net/upload/7/79/Squirtle_SSBU.png" alt="jenyjeny" width="100px">
 </div>
  
  
