--- a/part-3/index.html
+++ b/part-3/index.html
@@ -11,7 +11,7 @@
   </style>
  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
  <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
- <script src="jquery.ui.touch-punch.min.js"></script>
+ <script src="jquery.ui.mouse.touch-punch.min.js"></script>
   <script>
   $( function() {
     $( "#draggable" ).draggable();
