--- a/part-3/index.html
+++ b/part-3/index.html
@@ -20,9 +20,9 @@
 </head>
 <body>
  
-<div id="draggable" class="ui-widget-content">
-    <img src="https://cdn.bulbagarden.net/upload/7/79/Squirtle_SSBU.png" alt="jenyjeny" width="100px">
-</div>
+
+    <img id="draggable" src="https://cdn.bulbagarden.net/upload/7/79/Squirtle_SSBU.png" alt="jenyjeny" width="100px">
+
  
  
 </body>
